# mlops

./: .coverage  .flake8  .gitignore  Dockerfile  Dockerfile.serving  Makefile  coverage.xml  docker-compose.yml  dvc.yaml  params.yaml  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: ci.yml  release.yml
data/meta/: .gitignore
data/raw/: .bKhhD0veMOx7dwOvNsUZ0Q.tmp  creditcard.csv.dvc
notebooks/: eda.ipynb
scripts/: eda_metrics_report.py  load_data.py  make_sample_raw.py  preprocess.py  seed_mlflow_runs.py  split_data.py  train.py
src/fraud_detection/: api.py  config.py  data_loader.py  data_quality.py  errors.py  preprocess.py
tests/: conftest.py  test_api.py  test_api_integration.py  test_data_loader.py  test_data_quality.py  test_preprocess.py  test_train.py
