[tool.poetry]
name = "fraud-detection-mlops"
version = "0.1.0"
description = "MLOps pipeline for credit card fraud classification"
authors = []
readme = "README.md"
packages = [{ include = "fraud_detection", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
loguru = "0.7.2"
rich = "13.7.1"
pandas = "2.2.0"
numpy = "1.26.3"
scikit-learn = "1.4.0"
mlflow = "2.11.0"
fastapi = "0.109.2"
uvicorn = "0.27.1"
jupyter = "1.0.0"
matplotlib = "3.8.2"
seaborn = "0.13.1"
dvc = { version = "3.45.0", extras = ["s3"] }
pathspec = "0.11.2"
great-expectations = "0.18.12"
pytest = "7.4.4"
httpx = "0.26.0"
pytest-cov = "4.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.4"
flake8 = "7.0.0"
pytest-cov = "4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=fraud_detection --cov-fail-under=80 --cov-report=term-missing"

[tool.coverage.run]
source = ["fraud_detection"]
